--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,10 @@ main{
     font-weight: 600;
 }
 
+.form input::placeholder{
+    text-align: center;
+}
+
 .form .error{
     font-size: 16px;
     color: red;
